--- a/portfolio/dolina/index.html
+++ b/portfolio/dolina/index.html
@@ -581,8 +581,8 @@
               <div class="education__block">
                 <div class="education__block-video">
                   <video class="education__video" width="100%" height="100%" preload="metadata" playsinline="playsinline" pip="false" controls="controls" controlslist="nodownload" autoplay="autoplay" muted="muted" poster="img/poster.jpg">
-                    <source src="video/video.mp4" type="video/mp4" loading="lazy"/>
-                    <source src="video/video.webm" type="video/webm" loading="lazy"/>
+                    <source src="video/video.mp4" type="video/mp4"/>
+                    <source src="video/video.webm" type="video/webm"/>
                   </video>
                 </div>
                 <div class="education__block-text aside-block">
