fixed ie programm

--- a/portfolio/dolina/index.html
+++ b/portfolio/dolina/index.html
@@ -171,7 +171,7 @@
             </div>
           </div>
         </section>
-        <section class="target-s" id="target" >
+        <section class="target-s" id="target">
           <div class="container">
             <div class="target">
               <h2 class="title target__title">К чему ты придешь</h2>
@@ -426,7 +426,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-1.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-1.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-1.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-1.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -452,7 +452,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-2.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-2.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-2.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-2.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -480,7 +480,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-3.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-3.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-3.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-3.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -505,7 +505,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-4.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-4.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-4.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-4.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -530,7 +530,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-5.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-5.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-5.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-5.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -558,7 +558,7 @@
                       <div class="programm__block_right">
                         <div class="programm__image">
                           <picture class="programm__image-pict">
-                            <source class="lazy" type="image/webp" data-srcset="img//programm/programm-6.webp" loading="lazy"/><img class="lazy" data-src="img//programm/programm-6.jpg" alt="Слайд" loading="lazy"/>
+                            <source class="lazy" type="image/webp" data-srcset="img/programm/programm-6.webp" loading="lazy"/><img class="lazy" data-src="img/programm/programm-6.jpg" alt="Слайд" loading="lazy"/>
                           </picture>
                         </div>
                       </div>
@@ -581,8 +581,8 @@
               <div class="education__block">
                 <div class="education__block-video">
                   <video class="education__video" width="100%" height="100%" preload="metadata" playsinline="playsinline" pip="false" controls="controls" controlslist="nodownload" autoplay="autoplay" muted="muted" poster="img/poster.jpg">
-                    <source src="video/video.mp4" type="video/mp4"/>
-                    <source src="video/video.webm" type="video/webm"/>
+                    <source src="video/video.mp4" type="video/mp4" loading="lazy"/>
+                    <source src="video/video.webm" type="video/webm" loading="lazy"/>
                   </video>
                 </div>
                 <div class="education__block-text aside-block">
@@ -722,7 +722,7 @@
                   </div>
                 </div>
                 <div class="speaker__block-img">
-                  <picture class="homework__item-img">
+                  <picture class="speaker__img">
                     <source class="lazy" type="image/webp" data-srcset="img//speaker.webp" loading="lazy"/><img class="lazy" data-src="img//speaker.jpg" alt="Спикер" loading="lazy"/>
                   </picture>
                 </div>
