add three pages in questquest

--- a/portfolio/questquest/search.html
+++ b/portfolio/questquest/search.html
@@ -18,8 +18,9 @@
 		<link rel="apple-touch-icon" sizes="114x114" href="assets/images/favicon/apple-icon-114x114.png">
 		<link href="assets/styles/app.min.css" rel="stylesheet">
 		<title>QuestQuest | search</title>
-		<!--[if lt IE 10]><p class="browserupgrade">Вы используете <strong>устаревший</strong> браузер.Пожалуйста,  <a href="http://browsehappy.com/">обновите его до последней версии</a>, чтобы эта страница отображалась корректно.</p>
-<![endif]-->
+		<!--[if lt IE 10]>
+			<p class="browserupgrade">Вы используете <strong>устаревший</strong> браузер.Пожалуйста,  <a href="http://browsehappy.com/">обновите его до последней версии</a>, чтобы эта страница отображалась корректно.</p>
+		<![endif]-->
 	</head>
 
 	<body>
