--- a/portfolio/dolina/index.html
+++ b/portfolio/dolina/index.html
@@ -580,7 +580,7 @@
               <h2 class="title education__title">Как проходит обучение</h2>
               <div class="education__block">
                 <div class="education__block-video">
-                  <video class="education__video" width="100%" height="100%" preload="metadata" playsinline="playsinline" pip="false" autoplay="autoplay" muted="muted" poster="img/poster.jpg">
+                  <video class="education__video" width="100%" height="100%" controls="controls" controlslist="nodownload" preload="metadata" playsinline="playsinline" pip="false" autoplay="autoplay" muted="muted" poster="img/poster.jpg">
                     <source src="video/video.mp4" type="video/mp4" loading="lazy"/>
                     <source src="video/video.webm" type="video/webm" loading="lazy"/>
                   </video>
